# ke-hermes

./: .gitattributes  .gitignore  2026-05-21-164947-local-command-caveatcaveat-the-messages-below.txt  CLAUDE.md  README.md  README.zh-CN.md  page-snapshot.txt  pyrightconfig.json
backend/: .env.example  .gitignore  .rsa_key  CLAUDE.md  ke-hermes.db  mcp_server.py  pyproject.toml  run.py  test_pdf_output.txt
backend/db/: ke-hermes.db  langgraph_checkpoints.db  langgraph_checkpoints.db-shm  langgraph_checkpoints.db-wal
backend/docs/: DeepAgents-Memory-使用详解.md  Ke-Hermes 后端详细设计说明书-1.2.0.md  Ke-Hermes-Agent-功能模块详细设计说明书-1.0.0.md  Ke-Hermes-Knowledge-功能模块详细设计说明书.md  Ke-Hermes-事件流优化规划.md  Ke-Hermes-后端代码设计模式评估报告.md  Ke-Hermes-后端设计模式重构方案.md  Ke-Hermes-后端详细设计说明书.md  Ke-Hermes-数据库详细设计说明书-1.0.0.md  Ke-Hermes-数据库详细设计说明书.md  Ke-Hermes-设计模式重构分析报告.md  design.md  requirements.md  test_plan.md
backend/src/: server.py
backend/src/agent/: __init__.py  common.py  graph.py
backend/src/agent/builders/: __init__.py  agent_builder.py
backend/src/agent/config/: __init__.py  config.py
backend/src/api/: __init__.py  deps.py
backend/src/core/: __init__.py  cache.py  decorators.py  event_bus.py  pagination.py  response.py  security.py  store.py  verification.py
backend/src/db/: __init__.py  engine.py  utils.py
backend/tests/: conftest.py  test_loaders.py
backend/tests/fixtures/: sample.docx  sample.html  sample.json  sample.md  sample.pptx  sample.txt  sample.xlsx
backend/tests/integration_tests/: test_agent_api.py  test_agents_api.py  test_server.py
backend/tests/unit_tests/: test_agent.py  test_agent_service.py  test_config.py  test_event_bus.py  test_http_request.py  test_models.py  test_oauth_providers.py  test_tavily_search.py  test_vector_store_factory.py  test_verification.py
backend/workspace/memories/: AGENT.md
docs/: 1.创建项目.md  (+1 more)
(+341 files in other folders)
