[project]
name = "ke-hermes"
version = "0.0.1"
description = "通用智能体服务"
authors = []
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.1",
    "deepagents>=0.6.1",
    "langchain-openai>=1.2.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "bcrypt>=4.0",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "redis>=5.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "tavily-python>=0.7.24",
    "pydantic[email]>=2.12.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "python-multipart>=0.0.20",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.14",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.2",
]
